--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
       href="./fontawesome-free-6.5.1-web/css/all.min.css"
     />
-    <script src="./main.js" defer></script>
+    <script src="./index.js" defer></script>
     <title>main</title>
   </head>
   <body>
